force-app/main/default/objects/Weather__c./fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <label>longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>