force-app/main/default/objects/Weather__c./fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <label>message</label>
    <length>80</length>
    <type>Text</type>
</CustomField>