force-app/main/default/objects/Weather__c./fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>