force-app/main/default/objects/Weather__c./fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>url</label>
    <length>20</length>
    <type>Text</type>
</CustomField>